fixed gap at top of show pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ $black: #111111;
   float: left;
   width: 100%;
   z-index: 1;
+  margin-bottom:20px;
 }
 
 .name {
@@ -72,6 +73,13 @@ $black: #111111;
   overflow: hidden;
   position: relative;
   width: 100px;
+}
+
+.location-name {
+  color:$light-pink;
+  margin:0;
+  padding:20px;
+  text-align: center;
 }
 
 img {
